# emgmt

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
data/: database.db
migrations/: env.py
migrations/versions/: 02eab12eee1d_postgres_revision.py  32190597e6ab_migration_for_sqlalchemy.py  7729b24fc03b_added_date_formed_field_to_department.py  8b73826faeda_added_roles.py  c2264c57d77a_initial_migration.py
src/emgmt/: app.py  celery.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
src/emgmt/cli/: table_to_json.py  tasks.py
src/emgmt/routers/: auth.py  departments.py  employees.py  login.py  upload_files.py
src/emgmt/templates/: index.html
tests/: conftest.py  test_routes.py
